# pymadden

./: .flake8  .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  justfile  pyproject.toml
.github/PULL_REQUEST_TEMPLATE/: 01_pull_request_template.md
pymadden/: .pre-commit-config.yaml  __init__.py  api.py  client.py  config.py  models.py
tests/: test_api.py  test_models.py
