[tool.poetry]
name = "pymadden"
version = "0.1.0"
description = "A Python library for accessing the EA Ratings API."
authors = ["Timothy Byrne <trbyrne.11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.0"
pydantic = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
ruff = "^0.3.5"
isort = "^5.10.1"
flake8 = "^4.0.1"
black = "^22.3.0"
pytest = "^7.1.2"
pytest-cov = "^5.0.0"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.mypy_cache
  | build
  | dist
)/
'''

[tool.pytest]
minversion = "6.0"
addopts = "--verbose"
testpaths = ["tests",]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "PLE",  # pylint errors
    "PLW",  # pylint warnings
]


lint.ignore = [
    "E501",  # line too long
    # Add any other rules you want to ignore
]

exclude = [
    ".venv",
    ".git",
    "*.md",
    # Add any other files or directories to exclude
]